Fixed logo overlapping hamburger menu

--- a/assets/css/discord.css
+++ b/assets/css/discord.css
@@ -27,7 +27,7 @@ body {
     background: rgb(39, 39, 39);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    overflow: scroll;
+    overflow: auto;
     box-sizing: border-box;
     flex: 1;
     padding: 2rem;
@@ -51,12 +51,12 @@ body {
     filter: none;
     cursor: pointer;
     justify-self: end;
-    z-index: 15;
 }
 
 .floating-logo img {
     max-width: 100%;
     height: auto;
+    z-index: 15;
 }
 
 .floating-logo:hover {
